--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pueblo Bonito</title>
     <link rel="stylesheet" href="css/index.css">
     <meta name="robots" content="index, follow">
-    <link rel="icon" href="img/favico-1.png">
+    <link rel="icon" type="image/jpg" href="img/favico-1.png"/>
     <link rel="canonical" href="">
 
     <!--Coments-->
